# project-systemu

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  OPERATOR-SOP.md  README.md  SECURITY.md  USER_GUIDE.md  alembic.ini  docker-compose.override.yml.example  docker-compose.yml  install.bat  install.py  install.sh  pyproject.toml  requirements.in  requirements.txt  setup.bat  setup.sh  start.bat  start.sh  start_docker.bat  start_docker.sh  stop.bat  stop.sh  update.bat  update.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: general.yml
.github/ISSUE_TEMPLATE/: ai-task.yml  bug.yml  config.yml  docs.yml  feature.yml  good-first-issue.yml
.github/workflows/: publish.yml  skill-validator.yml  test.yml
alembic/: env.py
alembic/versions/: 20250508_0001_initial_schema.py  20250508_0002_phase3_events_approvals.py  20260512_0003_identity_split.py  20260514_0004_shadow_supervisor_enabled.py  20260515_0005_shadow_specialty.py  20260515_0006_tool_readiness_fields.py  20260516_0007_intent_pipeline_fields.py  20260517_0008_pipeline_trace.py  20260521_0009_recovery_path.py  20260526_0010_operator_decisions.py  20260719_0011_tool_model_field_parity.py
assets/: .gitkeep
cgb_eval/: PROVISIONER_AUDIT.md  __init__.py  _isolation_check.py  _reextract_v0941.py  _remediate_mcp_push.py  _smoke_v0936.py  _smoke_v0936_batch.py  _smoke_v0937.py  accounting.py  analysis.py  conditions.py  operator.py  oracle.py  paper_numbers.py  pull_decision.py  run_bulk.py  run_calibration.py  run_full.py  run_one.py  run_pilot.py  run_v0934.py  runner.py  safety_export.py  seed.py  task_spec.py
cgb_eval/mcp_servers/: __init__.py  _lookup_logic.py  lookup_server.py
cgb_eval/tasks/: __init__.py  access_family.py  compute_family.py  mcp_family.py  skill_family.py  subagent_family.py  tool_family.py
cgb_results/: paper_numbers.json  safety_properties.json  v0941_claude_opus_4_8.jsonl  v0941_deepseek_v4_pro.jsonl  v0941_gemini_3_flash.jsonl  v0941_glm_5_2.jsonl  v0941_gpt_5_4.jsonl
compliance/: controls.yaml
docker/: entrypoint.sh
docs/: CONC-MAP.md  MODEL-MATRIX.md  TASK-API.md  failure-classifier-reference.md  getting-started.md  glossary.md  governance.md  intelligent-supervisor.md  memory-model.md  messaging.md  redis-topologies.md
docs/skill-examples/: burrito-delivery-SKILL.md  find-nearby-SKILL.md
extension/: background.js  content.js  manifest.json  options.html  options.js
packaging/windows/: systemu.iss
plugins/: __init__.py
plugins/browser_use_wrapper/: __init__.py
release-notes/: R-A11-ssrf-dedupe.md  R-P3b-action-ledger.md  R-P3b-privacy-page.md  R-P3b-spend-caps.md  R-W1-survey-watermark-staleness.md  R-W1-world-model-slice2a-populate.md  R-W1-world-model-slice2b-invariant.md  R-W1-world-model-substrate.md  deny-band-never-standing.md  dryrun-gate-precheck.md  impl2-reclassify-core.md  impl2-reclassify-flow.md  seed-tools-are-not-forged.md  v0.10.0.md  v0.10.1.md  v0.10.10.md  v0.10.11.md  v0.10.12.md  v0.10.13.md  v0.10.14.md  v0.10.15.md  v0.10.16.md  v0.10.17.md  v0.10.18.md  v0.10.19.md  v0.10.2.md  v0.10.20.md  v0.10.21.md  v0.10.3.md  v0.10.4.md  v0.10.5.md  v0.10.6.md  v0.10.7.md  v0.10.8.md  v0.10.9.md  v0.7.4.md  v0.8.0.1.md  v0.8.0.2.md  v0.8.0.3.md  v0.8.0.md  (+112 more)
scripts/: copy_shadow_scenario.py  migrate_starter_pack.py  upgrade_db.py
sharing_on/: __init__.py  __main__.py  cli.py  config.py  model_matrix.py  model_presets.py  platform_info.py  redactor.py  session.py  setup_flow.py
sharing_on/analyzer/: __init__.py  generator.py  intent_extractor.py  step_detector.py  unifier.py
sharing_on/collectors/: __init__.py  base.py  clipboard.py  filesystem.py  input_hook.py  process.py  scope.py  screen.py  sources.py  web_extension.py  window.py
sharing_on/events/: __init__.py  models.py  store.py
sharing_on/output/: __init__.py  markdown.py
systemu/: __init__.py  worker.py
systemu/abstractions/: __init__.py  approval_gate.py  event_broker.py  task_queue.py  vault.py
systemu/approval/: __init__.py  decision_dispatcher.py  decision_queue.py  exceptions.py  notification_gate.py  sqlite_approval_gate.py
systemu/core/: __init__.py  llm_router.py  memory_types.py  models.py  schema_utils.py  utils.py
systemu/elder/: __init__.py  memory.py
systemu/events/: __init__.py  memory_event_broker.py  sqlite_event_broker.py
systemu/interface/: __init__.py  cli_commands.py  dashboard.py  dashboard_state.py  event_bridge_writer.py  event_bus.py  forge_gate.py  harness_review.py  jobs.py  log_filters.py  manual_event_bridge.py  memory_actions.py  name_resolver.py  nav_helpers.py  notifications.py  readiness_gate.py  scroll_gate.py  scroll_rebuild.py  task_api.py  tour.py  (+1 more)
tests/: _github_reference_server.py  _mcp_reference_server.py  conftest.py  test_ac1_silent_bind_invariant.py  test_ac1_trusted_source_allowlist.py  test_action_governance.py  test_activity_request_cap.py  test_activity_unsatisfiable_finalize.py  test_amend_then_approve_flow.py  test_apply_materialised_grant.py  test_auto_approve_recal_gate.py  test_backend_runner_drift_pin.py  test_bugfix_dashboard_live.py  test_capability_slots.py  test_cli_decisions.py  test_cli_decisions_inbox.py  test_cli_doctor.py  test_cli_doctor_apply.py  test_cli_dotenv_loading.py  test_cli_init.py  test_cli_pending_decision_wrapper.py  test_cli_settings_set.py  test_cli_tools_dryrun.py  test_cli_tools_enable.py  test_cli_tools_recalibrate_show.py  test_command_dispatch.py  test_command_gate_descriptor.py  test_command_gate_resume.py  test_command_rail_stream.py  test_command_result.py  test_command_view_models.py  test_compliance_controls.py  test_conc_map_writer_ownership.py  test_daemon_and_jobs.py  test_daemon_port_check.py  test_decision_audit.py  test_decision_card_serializable.py  test_decision_queue.py  test_decision_queue_amend.py  test_decision_queue_expire.py  (+575 more)
tools/: audit_starter_pack.py  lint_offload.py  lint_ui_styles.py  requirements-tools.txt  ui_style_baseline.txt
(+1162 files in other folders)
