[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "systemu"
version = "0.7.0"
description = "Record computer activity and generate step-by-step instructions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # --- Capture engine (sharing_on) ---
    "mss>=9.0.0",
    "psutil>=5.9.0",
    "watchdog>=3.0.0",
    "Pillow>=10.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    # v0.7-a-fix: pynput restricted to Windows.  It needs Xcode CLI tools
    # on macOS and X11 dev headers on Linux; on headless CI it fails to
    # install.  The sharing_on capture engine only uses pynput on Windows
    # anyway — the Mac + Linux capture paths use pyobjc / pyatspi.
    "pynput>=1.7.0; sys_platform == 'win32'",
    "uiautomation>=2.0.0; sys_platform == 'win32'",
    "pyobjc-core>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices>=10.0; sys_platform == 'darwin'",
    # NOTE: pyatspi (Linux AT-SPI bindings) is intentionally NOT listed here.
    # It is distributed via system packages (`apt install python3-pyatspi`),
    # not PyPI — pip cannot resolve it, breaking install on Linux CI.  The
    # Linux introspector wraps the import in try/except, so the dep is
    # optional at runtime.  Linux users who want full UI introspection
    # should install the system package and grant their venv access to it
    # (or pip install python3-pyatspi-wrapper if a maintained wheel ever
    # appears on PyPI).
    "playwright>=1.50.0",

    # --- runtime stack ---
    "nicegui>=2.0",        # dashboard UI
    "sqlalchemy>=2.0",     # vault ORM
    "alembic>=1.13",       # vault migrations
    "huey>=2.5",           # task queue (SQLite + Redis broker)
    "apscheduler>=3.11",   # daemon's periodic jobs
    "pydantic>=2.0",       # vault Pydantic models
    "httpx>=0.27",         # used by the Ollama provider + general http
    "pyyaml>=6.0",         # config + skill migrator + skill exporter
]

[project.urls]
Homepage      = "https://github.com/rameswaran-mohan/project-systemu"
Repository    = "https://github.com/rameswaran-mohan/project-systemu"
Documentation = "https://github.com/rameswaran-mohan/project-systemu/blob/main/README.md"
Issues        = "https://github.com/rameswaran-mohan/project-systemu/issues"
Discussions   = "https://github.com/rameswaran-mohan/project-systemu/discussions"
Changelog     = "https://github.com/rameswaran-mohan/project-systemu/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Three install modes — pick one with: pip install -e ".[<mode>]"
#   local            — native Python, SQLite vault + Huey-SQLite broker
#   docker-local     — docker-compose, Postgres vault + Huey-SQLite broker
#   docker-enterprise — docker-compose, Postgres vault + Huey-Redis broker

# Native LLM provider extras (v0.7-e):
#   anthropic        — native Anthropic SDK for claude-* models
#   openai-native    — native OpenAI SDK (already in core deps)
anthropic = ["anthropic>=0.40"]
openai-native = []  # uses existing openai dep

# v0.7-f: first out-of-tree plugin — Browser-Use wraps Playwright
# with an LLM-driven agent loop.
browser-use = ["browser-use>=0.5", "playwright>=1.40"]

# v0.7-g: Mem0 long-term memory backend (opt-in swap-in for the default
# filesystem JSONL+MD layout).  Select at runtime with
# SYSTEMU_MEMORY_BACKEND=mem0.
mem0 = ["mem0ai>=0.2"]

local = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "huey>=2.5",
    "apscheduler>=3.10",
]
docker-local = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "huey>=2.5",
    "apscheduler>=3.10",
    "psycopg2-binary>=2.9",
]
docker-enterprise = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "huey>=2.5",
    "apscheduler>=3.10",
    "psycopg2-binary>=2.9",
    "redis>=4.0",
]

# NOTE: Legacy extras `[sqlite]` and `[postgres]` were removed in this release.
# Use `[local]` (sqlite/alembic/huey) or `[docker-enterprise]` (+ postgres + redis)
# instead.  See README.md "Quick Start" for the install matrix.

[project.scripts]
sharing_on = "sharing_on.cli:main"

[tool.pytest.ini_options]
markers = [
    "linux_only: tests that only run on Linux (playwright, posix-only paths)",
    "docker_required: tests that need a docker daemon",
    "e2e: end-to-end live tests (skipped by default)",
]

[tool.setuptools.packages.find]
# Both top-level packages are part of the editable install:
#   * sharing_on  — the capture engine (declared as the PyPI package above)
#   * systemu     — the runtime, pipelines, interface, and starter vault
# The `silentgrasper*` rename-compat shim was removed in v0.3 per the
# deprecation window declared in v0.2's MIGRATION.md.
include = ["sharing_on*", "systemu*"]
